# Traigent

./: .aikidoignore  .codacy.yaml  .codesync.yml  .dockerignore  .dvcignore  .env.example  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .mailmap  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  404.html  =6.0.0  AGENT.md  AutoCoder_orders.txt  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_REVIEW_CODEX_SONAR_REMEDIATION.md  CLIENT_CONSISTENCY_IMPLEMENTATION.md  CODE_REVIEW_REQUEST_OBSERVABILITY_PHASES_2_TO_4.md  COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSING.md  CONTRACT-PROPOSAL.md  CONTRIBUTING.md  CONTRIBUTOR-LICENSING.md  DISCLAIMER.md  Dockerfile  EXAMPLES_POLISH_SUMMARY.md  LICENSE  MAINTENANCE.md  MANIFEST.in  Makefile  NOTICE  PR52_SDK_CONTRACT_COMPAT_AUDIT.md  QUALITY_GATE_REPORT_OBSERVABILITY_2026-02-27.md  README.md  RELEASE_BLOCKERS_TODO.md  RELIABILITY_SWEEP_CLAUDE_REVIEW_PACKET.md  (+53 more)
.changeset/: README.md  few-deers-shop.md  shaggy-crews-beg.md
.codacy/: codacy.yaml
.devcontainer/: devcontainer.json
.dvc/: config
.github/: BRANCH_PROTECTION_CUTOVER.md  CI_TIERS.md  GITHUB_ACTIONS_FREE_TIER.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.post_release_recommendation_fixes/: CAPTAIN_PROTOCOL.md  START_WORKFLOW.md  TRACKING.md  USER_QUESTIONS.md
.release_review/: CAPTAIN_PROTOCOL.md  PRE_RELEASE_REVIEW_PLAN.md  PRE_RELEASE_REVIEW_TRACKING.md  PRIORITY_REVIEW_WAVES.md  RELEASE_QUALITY_PLAYBOOK.md  SEVERITY_POLICY.md  START_REVIEW.md  components.yml  rotation_history.json  scope.yml
LOCAL_CI_GATE/: index.html
SYNC_MAP/: index.html
_bmad-output/: code-review-request.md  epics.md  sprint-status.yaml
agent-skill/: index.html
baselines/: performance.json
configs/: auto_tune_config.yaml
contributing/: index.html
demos/: index.html
docs/: BRANCH_PROTECTION.md  CLIENT_CODE_GUIDE.md  CROSS_SDK_VALIDATION.md  CURRENT_STATUS.md  DEMO_VIDEO_GUIDE.md  HOW_TO_ADD_LLMS.md  HYBRID_JS_PARITY_MATRIX.md  INTERNAL_RELEASE_NOTES_NATIVE_JS.md  JS_PARITY_ROADMAP.md  LOCAL_CI_GATE.md  NATIVE_JS_PARITY_MATRIX.md  ONBOARDING_HEAD_OF_AI.md  PRD_Agentic_Workflow_Tuning_Haystack.docx  PYTHON_SDK_MODULE_CATALOG_AND_GAP_ANALYSIS.md  PYTHON_TVL_PARITY_MATRIX.md  README.md  REAL_MODE_SEQUENCE_FLOW.md  RELEASING.md  SCHEMA_ALIGNMENT_AUDIT.md  SONAR_TRIAGE.md  SYNC_MAP.md  TYPED_SESSION_SMOKE.md  agent-skill.md  agent_development_script.md  aikido_issues (8).csv  bazak-poc-overview.md  bazak-traigent-sequence.md  case_study_pipeline_overhaul.md  competitive_analysis.md  concepts  evaluation_contract.md  fake-completion-tracking.md  functionalities.yml  global_registrations_audit.md  grid_search_fix_analysis.md  grid_search_model_prioritization.md  hybrid-mode-api-contract.md  hybrid-mode-client-guide.md  hybrid-mode-integration-guide.tex  hybrid-mode-openapi.yaml  (+8 more)
examples/: MANIFEST.txt  README.md  catalog.yaml  hybrid-optuna.mjs  index.html  native-optimization.mjs  test_all_examples.sh
fake-completion-tracking/: index.html
feature_matrices/: evaluators.yml  index.html
features/: index.html
getting-started/: index.html
js/: 404.html  (+1 more)
plugins/traigent-analytics/: README.md  pyproject.toml
plugins/traigent-analytics/traigent_analytics/: __init__.py  anomaly.py  cost_optimization.py  intelligence.py  meta_learning.py  predictive.py  scheduling.py
plugins/traigent-opal/: README.md  pyproject.toml
plugins/traigent-opal/tests/: test_api_spec.py  test_compiler.py  test_symbol_dsl.py
plugins/traigent-opal/traigent_opal/: __init__.py  api.py  compiler.py
plugins/traigent-tracing/: README.md  pyproject.toml
plugins/traigent-tracing/traigent_tracing/: __init__.py  tracing.py
plugins/traigent-tuned-variables/: README.md  pyproject.toml
plugins/traigent-tuned-variables/tests/: __init__.py  test_analyzer.py  test_callables.py  test_presets.py
plugins/traigent-tuned-variables/traigent_tuned_variables/: __init__.py
plugins/traigent-tuned-variables/traigent_tuned_variables/analysis/: __init__.py  variable_analyzer.py
plugins/traigent-tuned-variables/traigent_tuned_variables/callables/: __init__.py  callable.py  formatters.py  retrievers.py
plugins/traigent-tuned-variables/traigent_tuned_variables/presets/: __init__.py  llm.py  prompting.py  rag.py
plugins/traigent-ui/: README.md  pyproject.toml
plugins/traigent-ui/traigent_ui/: README.md  STREAMLIT_README.md  __init__.py  cli.py  generate_problem_suite.py  optimization_callbacks.py  optimization_storage.py  problem_manager.py  requirements_streamlit.txt  security_utils.py  test_claude_sdk_classifier.py  test_improved_generation.py  traigent_control_center.py
plugins/traigent-ui/traigent_ui/langchain_problems/: __init__.py  american_history_qa_tutor.py  assembly_code_logic_puzzles.py  base.py  basic_arithmetics.py  code_review.py  customer_support_request_classification.py  document_summarization.py  georgian_cuisine_trivia_qa.py  javascript_coding_puzzles.py  medical_diagnostic_questions.py  sentiment_analysis.py  smoking_cessation_guidance.py  test_tech_support.py  text_to_sql_query_generation.py
plugins/traigent-ui/traigent_ui/problem_generation/: README.md  batch_problem_generator.py  constrained_generators.py  diversity_analyzer.py  enhanced_example_generator.py  improved_problem_classifier.py  problem_diversity_manager.py  problem_types.py
plugins/traigent-ui/traigent_ui/problem_generation/config/: problem_types.yaml
plugins/traigent-ui/traigent_ui/problem_management/: code_generator.py  domain_knowledge.py  enhanced_example_generation.py  example_generator.py  example_validator.py  intelligence.py  llm_providers.py  problem_analyzer.py  prompt_builder.py  prompt_templates.py  smart_problem_analyzer.py
plugins/traigent-ui/traigent_ui/problem_management/domain_knowledge/: customer_service.json  financial.json  legal.json  technical.json
plugins/traigent-ui/traigent_ui/streamlit_core/: browse_results.py  components.py  custom_problems.py  navigation.py  optimization.py  state.py
plugins/traigent-ui/traigent_ui/streamlit_utils/: __init__.py  progress_tracking.py
(+3519 files in other folders)
