[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traigent"
version = "0.11.4"
authors = [
    {name = "Traigent Team", email = "opensource@traigent.ai"},
]
description = "Enterprise-grade LLM optimization platform with advanced analytics and AI-powered insights"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "llm", "optimization", "machine-learning", "ai", "hyperparameter-tuning",
    "analytics", "meta-learning", "cost-optimization", "anomaly-detection",
    "predictive-analytics", "enterprise", "bayesian-optimization"
]

# Core dependencies - minimal for basic functionality
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "aiohttp>=3.13.4,<4.0",  # CVE-2026-34513..34525 fixed in 3.13.4 (see #677)
    "requests>=2.33.0",  # Required by Langfuse integration sync fallback; CVE-2026-25645 fix
    "jsonschema>=4.0.0",
    "cryptography>=46.0.7",  # CVE-2026-26007 + 3 more fixed in 46.0.7 (see #709)
    "backoff>=2.2.0",
    "litellm>=1.83.7,<2.0",  # GHSA-xqmj-j6mv-4862 (prompt template SSTI) fixed in 1.83.7; prior: GHSA-69x8-hrgq-fjj8 (see #652)
    "rank-bm25",
    # Required by core optimizer modules
    "optuna>=4.5.0",
    "psutil>=5.8.0",
    # Required by API decorators and config validation
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Analytics and intelligence features (Sprint 8)
analytics = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
]

# Bayesian optimization (Sprint 4)
bayesian = [
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

# Framework integrations (Sprint 6)
integrations = [
    "langchain>=0.0.200",
    "langchain-core>=1.2.28",  # CVE-2026-26013 + CVE-2026-40087 (improper template neutralization) fix
    "langchain-community>=0.3.27",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=1.1.14",  # GHSA-r7w7-9xr2-qq2r (SSRF) fix
    "langchain-chroma>=0.2.5",
    "langchain-text-splitters>=0.3.8",  # Document chunking for RAG
    "langchain-google-genai>=2.1.4",  # Google Gemini support via LangChain
    "openai>=2.0.0",
    "anthropic>=0.18.0",
    "groq>=0.9.0",  # Groq cloud inference
    "google-genai>=0.8.0",  # Google's forward SDK for direct Gemini support
    "google-generativeai>=0.3.0",  # Kept for langchain-google-genai compatibility
    "rank_bm25>=0.2.2",
    "mlflow>=3.11.1,<4.0",  # Defensive bump — Aikido flagged tarfile.extractall path-traversal in mlflow <3.9.0 (see #616)
    "wandb>=0.15.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "faiss-cpu>=1.7.0; sys_platform != 'win32'",  # RAG vector search (not available on Windows)
]

# DSPy prompt optimization integration
dspy = [
    "dspy-ai>=2.5.0",
]

# PydanticAI agent framework integration
pydanticai = [
    "pydantic-ai-slim>=1.56.0,<2",  # CVE triage patched floor for PydanticAI slim
]

# Enterprise security features (Sprint 7)
security = [
    "pyjwt>=2.12.0",  # CVE-2026-32597 fix
    # cryptography and psutil are in core dependencies
    "passlib>=1.7.4",
    "python-multipart>=0.0.26",  # CVE-2026-24486, CVE-2026-40347 fix
    "fastapi>=0.95.0",
    "starlette>=0.49.1",  # CVE-2025-62727 fix (FastAPI dependency)
    "uvicorn>=0.18.0",
    "redis>=4.0.0",
    "defusedxml>=0.7.1",  # Prevent XXE attacks in XML parsing
    "pyotp>=2.9.0",  # TOTP authentication support
]

# Visualization features
visualization = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]

# Hybrid mode - external agentic service optimization via REST API
hybrid = [
    "httpx[http2]>=0.24.0",
    "claude-code-sdk>=0.0.14",
    "mcp>=1.27.0",  # CVE-2025-66416, AIKIDO-2026-10472 fix (claude-code-sdk dependency)
]

# Internal schema validation support for DTO strict-validation paths.
internal_schema = [
    "traigent-schema @ git+https://github.com/Traigent/TraigentSchema.git@96c30d3c6f4f0ab32748093357bbedfab89b80a5",
]

# Testing dependencies
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.0.0",  # Per-test timeout to catch hanging tests
    "pytest-xdist>=3.0.0",  # Parallel test execution
    "coverage>=7.0.0",
    "ragas>=0.3.6",
    "rapidfuzz>=3.14.0",
    "hypothesis>=6.0.0",  # Property-based stateful testing for cost enforcement
]

# OpenTelemetry tracing for test observability
# Pin all otel packages to the same minor so UV/pip can't mix incompatible
# API ↔ SDK ↔ exporter versions (see #558 ReadableLogRecord crash).
tracing = [
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0.0",
]

# Development dependencies
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",  # Required by addopts: -n auto --dist loadgroup
    "black>=26.3.1",  # CVE-2026-32274 fix
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-bleach>=6.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "hypothesis>=6.100.0",  # Property-based testing for validation logic
]

# Documentation
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

# NOTE: playground and examples dependencies moved to TraigentDemo project

# Machine Learning bundle (parallel execution, advanced algorithms, multi-objective)
# This is the recommended bundle for production ML workloads
ml = [
    "traigent[bayesian,analytics]",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

# DeepEval integration (LLM evaluation metrics as optimization objectives)
deepeval = [
    "deepeval>=1.0.0",
]

# Cloud bundle (cloud execution mode, advanced session management)
cloud = [
    "traigent[security]",
    "boto3>=1.28.0",
]

# Recommended bundle for end users — everything needed to run optimizations
# out of the box without dev/test/docs overhead
recommended = [
    "traigent[integrations,analytics,bayesian,visualization,hybrid,pydanticai]",
]

# All optional features combined (playground/examples moved to TraigentDemo)
all = [
    "traigent[analytics,bayesian,integrations,pydanticai,security,visualization,test,tracing,hybrid]"
]

# Enterprise bundle with all features (playground/examples moved to TraigentDemo)
enterprise = [
    "traigent[analytics,bayesian,integrations,security,visualization,test,tracing,ml,cloud,hybrid]",
]

[project.urls]
Homepage = "https://github.com/Traigent/Traigent"
Documentation = "https://docs.traigent.ai"
Repository = "https://github.com/Traigent/Traigent"
"Bug Tracker" = "https://github.com/Traigent/Traigent/issues"
Changelog = "https://github.com/Traigent/Traigent/blob/main/CHANGELOG.md"

[project.scripts]
traigent = "traigent.cli.main:cli"

[project.entry-points."traigent.validators"]
python = "traigent_validation.validators:PythonConstraintValidator"
sat = "traigent_validation.validators:SATConstraintValidator"

[tool.setuptools.packages.find]
where = ["."]
include = ["traigent*", "traigent_validation*"]
exclude = ["tests*", "demos*", "docs*", "traigent.experimental*"]

[tool.setuptools.package-data]
traigent = ["py.typed", "examples/**/*.jsonl", "skills/**/*.md"]
traigent_validation = ["py.typed"]

[tool.uv]
constraint-dependencies = [
    "flask>=3.1.3",
    "langgraph>=1.0.10",
    "langsmith>=0.7.31",
    "mako>=1.3.11",
    "pyasn1>=0.6.3",
    "werkzeug>=3.1.6",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | demos
  | docs/page-inline
  | examples/templates
  | examples/advanced/execution-modes
  | examples/advanced/results-analysis
  | examples/tvl/reusable_safety/run_demo\.py
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["traigent"]
known_third_party = [
    "click", "rich", "aiohttp", "requests", "jsonschema", "numpy", "pandas",
    "matplotlib", "plotly", "scikit-learn", "langchain", "openai",
    "mlflow", "wandb", "pyjwt", "cryptography"
]

[tool.mypy]
python_version = "3.12"
files = [
    "traigent/",
]
ignore_missing_imports = true
follow_imports = "skip"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "openai.*",
    "mlflow.*",
    "wandb.*",
    "plotly.*",
    "sklearn.*",
    "scipy.*",
    "jwt.*",
    "cryptography.*",
    "passlib.*",
    "numpy.*",
    "pandas.*",
    "matplotlib.*",
    "tokencost.*",
    "litellm.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "-n", "auto",
    "--dist", "loadgroup",
    "-m", "not performance",
    "-v",
    "--ignore=plugins",
    "--ignore=tests/auto_tune",
    # JS bridge tests — require Node.js runtime, can crash terminals
    "--ignore=tests/unit/bridges",
    "--ignore=tests/unit/test_bridge_wrapper.py",
    "--ignore=tests/unit/evaluators/test_js_evaluator.py",
    "--ignore=tests/unit/evaluators/test_js_evaluator_budget.py",
    "--ignore=tests/unit/evaluators/test_js_evaluator_stop_conditions.py",
    # Hangs at ~33% — works in CI with different timeout handling
    "--ignore=tests/unit/core/test_constraints_enforced.py",
    # Hangs at ~33% locally — works in CI with different timeout handling
    "--ignore=tests/unit/core/test_orchestrator.py",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:\\s*All support for the `google\\.generativeai` package has ended\\..*:FutureWarning",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: marks tests as async tests",
    "analytics: marks tests as analytics tests",
    "security: marks tests as security tests",
    "timeout: marks tests that expect a timeout decorator",
    "rate_limit: marks tests for rate limit handling behavior",
    "chaos: marks chaos/fault injection tests (slow, may be flaky)",
    "contract: marks contract tests against real APIs (requires credentials)",
    "performance: marks benchmark/performance tests (excluded from default suite)",
]

[tool.coverage.run]
source = ["traigent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/demos/*",
    "*/docs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "TYPE_CHECKING",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    # NOTE: examples folder moved to TraigentDemo
    "docs/diagrams/**",
    "docs/generated/**",
    "**/__pycache__/**",
    "**/node_modules/**",
    "**/.git/**",
    "**/build/**",
    "**/dist/**",
    "**/*.egg-info/**",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort - disabled, using standalone isort in CI for import sorting
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["traigent"]
known-third-party = [
    "click", "rich", "aiohttp", "requests", "jsonschema", "numpy", "pandas",
    "matplotlib", "plotly", "scikit-learn", "langchain", "openai",
    "mlflow", "wandb", "pyjwt", "cryptography"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]
"examples/*" = ["E402"]  # Examples often set env vars before imports
"traigent/examples/*" = ["E402"]  # Bundled examples set env vars before imports
