[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traigent-analytics"
version = "0.1.0"
description = "Advanced AI analytics plugin for Traigent SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Traigent Team", email = "support@traigent.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["traigent", "analytics", "ai", "machine-learning", "optimization"]
dependencies = [
    "traigent>=0.9.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.entry-points."traigent.plugins"]
analytics = "traigent_analytics:AnalyticsPlugin"

[project.urls]
Homepage = "https://github.com/Traigent/Traigent"
Documentation = "https://docs.traigent.ai/plugins/analytics"
Repository = "https://github.com/Traigent/Traigent"

[tool.hatch.build.targets.wheel]
packages = ["traigent_analytics"]
