[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traigent-opal"
version = "0.3.0"
description = "OPAL plugin for Traigent SDK: parse OPAL-style declarations into Traigent optimize kwargs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Traigent Team", email = "support@traigent.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "traigent",
    "opal",
    "dsl",
    "optimization",
    "llm",
]
dependencies = [
    "traigent>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.entry-points."traigent.plugins"]
opal = "traigent_opal:OpalPlugin"

[project.urls]
Homepage = "https://github.com/Traigent/Traigent"
Documentation = "https://docs.traigent.ai/plugins/opal"
Repository = "https://github.com/Traigent/Traigent"

[tool.hatch.build.targets.wheel]
packages = ["traigent_opal"]
