[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traigent-ui"
version = "0.1.0"
description = "Streamlit-based UI and playground for Traigent SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Traigent Team", email = "support@traigent.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Streamlit",
]
keywords = ["traigent", "ui", "streamlit", "playground", "visualization"]
dependencies = [
    "traigent>=0.9.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=1.5.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]

[project.scripts]
traigent-ui = "traigent_ui.cli:main"

[project.entry-points."traigent.plugins"]
ui = "traigent_ui:UIPlugin"

[project.urls]
Homepage = "https://github.com/Traigent/Traigent"
Documentation = "https://github.com/Traigent/Traigent/tree/main/docs"
Repository = "https://github.com/Traigent/Traigent"

[tool.hatch.build.targets.wheel]
packages = ["traigent_ui"]
